--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
+html {
+  font-size: 16px;
+}
+
 body {
   margin: 0;
+  padding: 0;
+  font-size: 14px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
